WIP: Use doxysphinx to integrate C++ API docs into Sphinx
Not yet integrated into SCons -- currently requires running doxysphinx
and the tag2toc script separately, after building the Doxygen docs but
before running Sphinx.

--- a/doc/sphinx/_static/custom.css
+++ b/doc/sphinx/_static/custom.css
@@ -8,3 +8,15 @@ p + div.math {
     display: none;
     visibility: hidden;
 }
+
+div.navpath {
+    /* Hide namespace-level navigation from Doxygen */
+    display: none;
+    visibility: hidden;
+}
+
+div.ingroups {
+    /* Hide group-based navigation from Doxygen */
+    display: none;
+    visibility: hidden;
+}
